2012-05-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Add a better support for different k values in Sauvola Multiscale.

	* scribo/scribo/binarization/internal/sauvola_ms_functor.hh,
	* scribo/scribo/binarization/sauvola_ms.hh,
	* scribo/scribo/binarization/sauvola_ms_split.hh,
	* scribo/scribo/toolchain/internal/text_in_doc_preprocess_functor.hh,
	* scribo/scribo/toolchain/text_in_doc_preprocess.hh: Make use of
	k2, k3 and k4 variables.

	* scribo/src/binarization/sauvola_ms.cc,
	* scribo/src/binarization/sauvola_ms_debug.cc,
	* scribo/src/binarization/sauvola_ms_fg.cc,
	* scribo/src/binarization/sauvola_ms_split.cc: Fix program
	arguments.

2012-05-11  Guillaume Lazzara  <z@lrde.epita.fr>

	Add a default verbose mode in debug::logger.

	* scribo/debug/logger.hh: Here.

2012-05-11  Guillaume Lazzara  <z@lrde.epita.fr>

	Make use of logger features.

	* scribo/binarization/internal/local_threshold_core.hh,
	* scribo/binarization/internal/sauvola_formula.hh,
	* scribo/binarization/sauvola_ms.hh: Make use of operator<< with
	debug::logger.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* src/binarization/sauvola_ms.cc: Fix options handling.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix call to sauvola_ms.

	* scribo/binarization/sauvola_ms.hh,
	* scribo/binarization/sauvola_ms_split.hh: Here.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Make use of new logger features.

	* src/binarization/global_threshold.cc,
	* src/binarization/kim.cc,
	* src/binarization/niblack.cc,
	* src/binarization/otsu.cc,
	* src/binarization/sauvola.cc,
	* src/binarization/sauvola_ms.cc,
	* src/binarization/sauvola_ms_debug.cc,
	* src/binarization/sauvola_ms_fg.cc,
	* src/binarization/sauvola_ms_split.cc,
	* src/binarization/wolf.cc: Make use of operator<<.

2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	Cleanup Kim's binarization.

	* src/binarization/kim.cc: Move code...
	* scribo/binarization/kim.hh: ... here.

	* tests/binarization/Makefile.am: Add new target.
